[package]
name = "aleo-explorer-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
snarkvm-console-network = { version = "0.11.2", features = ["wasm"] }
snarkvm-console-program = "0.11.2"
snarkvm-console-account = "0.11.2"
snarkvm-console-types = "0.11.2"

wasm-bindgen = "0.2.86"

getrandom = { version = "0.2.9", features = ["js"] }

[profile.release]
lto = true
opt-level = "z"
debug = false
strip = true