[package]
name = "aleo-explorer-wasm"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
snarkvm-console-network = { version = "0.16.15", features = ["wasm"] }
snarkvm-console-program = "0.16.15"
snarkvm-console-account = "0.16.15"
snarkvm-console-types = "0.16.15"
snarkvm-synthesizer-program = { version = "0.16.15", features = ["wasm"] }
snarkvm-synthesizer-process = { version = "0.16.15", features = ["async", "wasm"] }
snarkvm-circuit-network = { version = "0.16.15", features = ["wasm"] }
snarkvm-circuit-environment = "0.16.15"
snarkvm-circuit-program = "0.16.15"
snarkvm-circuit-types = "0.16.15"

wasm-bindgen = "0.2.89"

getrandom = { version = "0.2.12", features = ["js"] }
web-sys = { version = "0.3.66" , features = ["console"]}
hex = "0.4.3"
rand = "0.8.5"
indexmap = "2.1.0"

[profile.release]
lto = true
opt-level = "z"
debug = false
strip = true